--- a/src/core-ui/main.scss
+++ b/src/core-ui/main.scss
@@ -20,6 +20,23 @@ a {
     text-decoration: none;
 }
 
+button.submit {
+    width: 100px;
+    height: 30px;
+    color: #fff;
+    padding: 4px;
+    border: none;
+    margin-bottom: 4px;
+    background-color: #222;
+    display: block;
+}
+button.submit.green { background-color: #5FA52E; }
+button.submit.blue { background-color: #6EA7FB; }
+button.submit.pink { background-color: #E275AA; }
+button.submit.grey { background-color: #E0E0E0; color: #222; }
+button.submit.grey.disabled { color: #999; }
+button.submit.inlineBtn { display: inline; }
+
 @-webkit-keyframes placeholdLoading {
     from {
         background-color: #cee0e6;
@@ -45,7 +62,7 @@ a {
 
 .order-placeHolder, .Orders .Order {
     background: #cee0e6;
-    width: 450px;
+    width: 550px;
     min-height: 100px;
     padding: 20px;
     margin-bottom: 25px;
@@ -215,7 +232,11 @@ button.pending {
 .mainWrapper {
     width: 100%;
     height: 100vh;
-    background-image: url("../Assets/Images/brickBackground.png");
+    background-color: #d8dfea;
+
+    @media (min-width: 992px) {
+        background-image: url("../Assets/Images/brickBackground.png");
+    }
 
     .topHeader {
         width: calc(100% - 20px);
@@ -303,9 +324,20 @@ button.pending {
             margin-top: 10px;
         }
 
-        .contentBox {
-            margin: 10px;
+        .contentWrapper {
+            width: 100%;
+            margin-top: 10px;
             display: inline-block;
+
+            .card-wrapper {
+                width: 100%;
+                padding: 10px;
+                border-bottom: 10px #d8dfea solid;
+
+                &:last-child {
+                    border-bottom: 0;
+                }
+            }
         }
     }
 }
